Use march= instead of msse4.2
Using march allows the compiler to optimize for a specific target
architecture. Use Nehalem micro-architecture which was introduced
2008 which introduced SSE4.2.

Next micro-architecture would be Haswell for AVX2. It was
introduced in 2013. See also:
https://www.phoronix.com/scan.php?page=news_item&px=GCC-11-x86-64-Feature-Levels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" OR "${CMAKE_SYSTEM_PROCESSOR}" 
     $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Debug>>:-fcoverage-mapping>
     $<$<CXX_COMPILER_ID:GNU>:-ftree-vectorize>
     $<$<CXX_COMPILER_ID:GNU>:-fopt-info-vec-optimized>
-    -msse4.2
+    -march=nehalem
   )
   list(APPEND DEFAULT_LINKOPTS
     $<$<CONFIG:Debug>:-fsanitize=address,undefined,leak>
